# 2025_10-Consar-Siefore-Update-Agent

./: .gitignore  README.md  UNITS_DOCUMENTATION.md  WORKFLOW.md  approval_pending.json  approve_and_integrate.py  config.py  consar_agent.py  consar_latest_month.json  consar_latest_month_enriched.json  consar_latest_month_enriched_fixed.json  consar_sept_2025.json  consar_sept_2025_enriched.json  consar_sept_2025_enriched_fixed.json  consistency_report.json  create_github_release.py  download_basica_inicial.py  enrich_latest_month.py  extract_latest_month.py  fix_database_units.py  fix_units_and_integrate.py  generate_pipeline_summary.py  generate_ytd_comparison.py  latest_run_metadata.json  migrate_normalize_units.py  push_to_history_repo.py  pyproject.toml  requirements.txt  run_complete_pipeline.py  run_reports.sh  send_review_email.py  verify_consistency.py
.github/workflows/: approve.yml  approve_release.yml  pipeline.yml  run_pipeline.yml
consar/: __init__.py  config.py
consar/approval/: integrate.py  release.py
consar/pipeline/: download.py  enrich.py  extract.py  run.py  summarize.py  verify.py
consar/reports/: generate.py
consar/reports/modules/: calculator.py  charts.py  data.py  pdf.py  summary.py  tables.py
reports/: __init__.py  generate_reports.py
reports/modules/: __init__.py  aum_calculator.py  chart_generator.py  pdf_generator.py  summary_generator.py  table_formatter.py
scripts/: run_reports.sh
