[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consar-siefore-agent"
version = "1.0.0"
description = "Automated CONSAR pension fund data pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "fpdf2>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["consar*"]

[project.scripts]
consar-pipeline = "consar.pipeline.run:main"
consar-approve = "consar.approval.integrate:main"
consar-release = "consar.approval.release:main"
consar-reports = "consar.reports.generate:main"
